--- a/DataStructureLibrary/DataStructureLibrary.vcxproj.filters
+++ b/DataStructureLibrary/DataStructureLibrary.vcxproj.filters
@@ -36,7 +36,10 @@
     <ClInclude Include="pch.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Tree.h">
+    <ClInclude Include="BinarySearchTree.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="AVLTree.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
